# eFilter

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  pyproject_ebuild.toml
results/: halicin_jnk_rewards_1kmix.tsv  quino_reward.tsv
src/efilter/: __about__.py  checkingefilter.py  eFilter.py  main.py  train.py
src/efilter/docking/: JNK1.pdbqt  JNK2.pdbqt  JNK3.pdbqt  docking.py
src/efilter/representation/: Molecule.py
src/efilter/utilities/: constants.py  log.py  logging.py  moleculereader.py  options.py  smilesreader.py  tc.py
tests/: __init__.py  test_ebuild.py  test_efilter.py
