[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eFilter"
dynamic = ["version"]
maintainers = [{ name = "Adam Bess", email = "bess@deepdrug.ai" }]
description = 'Filter synthesized molecules by properties, pathways and predicted targets.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "molecule",
  "physical properties",
  "pathway prediction",
  "classification",
  "target prediction",
  "bioinformatics",
]
authors = [
  { name = "bessx", email = "1159066+bessx@users.noreply.github.com" },
  { name = "Adam Bess", email = "bess@deepdrug.ai" },
  { name = "Chris Alvin", email = "calvin@deepdrug.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy<2",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "rdkit",
  "colorlog",
  "pytest",
  "tensorflow",
  "xgboost",
  "pydot==1.4.2",
  "graphviz",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
types = ["pyright", "tensorflow-stubs"]


[project.urls]
Documentation = "https://github.com/deepdrugai/efilter#readme"
Issues = "https://github.com/deepdrugai/efilter/issues"
Source = "https://github.com/deepdrugai/efilter"

[tool.hatch.version]
path = "src/efilter/__about__.py"

[tool.hatch.envs.dev]
dependencies = ["pytest", "pytest-cov", "pyright", "tensorflow-stubs"]
[tool.hatch.envs.dev.scripts]
typ = "pyright"
types = "pyright --stats"
typesskip = "pyright --stats --skipunannotated"

[tool.pyright]
include = ["src/efilter", "tests"]
typeCheckingMode = "basic"
reportAttributeAccessIssue = false # weird issues
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportMissingImports = false

[tool.coverage.run]
source_pkgs = ["efilter", "tests"]
branch = true
parallel = true
omit = ["src/efilter/__about__.py"]

[tool.coverage.paths]
efilter = ["src/efilter", "*/eFilter/src/efilter"]
tests = ["tests", "*/efilter/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[project.scripts]
efilter = "efilter.eFilter:main"

[tool.ruff]
line-length = 142

[tool.ruff.lint]
ignore = ["N", "SLF", "F541", "BLE001", "EM", "TRY0", "FBT", "PLR2004", "T20"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.hatch.build.targets.wheel]
packages = ["src/efilter"]
exclude = ["**/__pycache__", "**/*.pyc"]

# [tool.hatch.build]
# include = ["src/efilter"]

# Fix dynamic vs static import issues (efilter.* vs eFilter.src.efilter.*)
# [tool.hatch.build]
# source = "src"
# packages = [{ include = "efilter", from = "src" }]
